# employment-x

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api-rust/: .env.example  Cargo.toml
apps/api-rust/src/: config.rs  db.rs  error.rs  main.rs  router.rs  state.rs  telemetry.rs
apps/api-rust/src/middleware/: auth.rs  idempotency.rs  mod.rs  request_id.rs  tenant.rs
apps/api-rust/src/modules/: applications.rs  auth.rs  billing.rs  candidates.rs  chat.rs  demo.rs  employers.rs  flags.rs  interviews.rs  jobs.rs  mod.rs  scheduling.rs  shortcuts.rs
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/prisma/: schema.prisma
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: command-palette-wrapper.tsx  dashboard-nav.tsx  demo-banner.tsx  shortcut-help-overlay.tsx
apps/web/src/lib/: api.ts  env.ts  hooks.ts  keyboard-engine.ts  providers.tsx
docs/: 01-architecture-spec.md  02-feature-registry.md  03-db-ddl-index-strategy.md  04-api-contracts-error-model.md  05-frontend-architecture.md  06-keyboard-system-spec.md  07-scheduling-reminder-engine-spec.md  08-idempotency-middleware-spec.md  09-observability-slo-spec.md  10-test-matrix.md  11-cicd-pipeline-spec.md  12-sprint-plan.md  13-risk-register.md  14-milestone-m1-plan.md  15-completion-roadmap-m1-m5.md  16-master-execution-prompt-v1.md  17-master-execution-prompt-v2.md  audit-report-v0.9.md  employmentx-feature-registry.csv  employmentx-feature-tracker.csv  employmentx-m1-jira-import.csv
docs/runbooks/: incident-response.md  launch-gates.md  local-setup.md  queue-failure.md  rollback.md
infra/docker/: Dockerfile.api  docker-compose.yml
infra/migrations/: 20240101000001_initial_schema.sql  20240101000002_demo_tables.sql  20240101000003_video_interview_infra.sql
(+131 files in other folders)
