[package]
name = "employmentx-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip", "timeout"] }
hyper = { version = "1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
sentry = { version = "0.34", features = ["tracing", "tower"] }

# Config
dotenvy = "0.15"
config = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

# Stripe
stripe-rust = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper"] }

# Misc
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
fake = { version = "3", features = ["derive"] }
claims = "0.7"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
